[project]
name = "sample"
version = "0.1.0"
description = "sample project"
readme = "README.md"
authors = [
    { name = "Vasileios Bardakos", email = "vasilisbardakos@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
sample = "sample:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
